# einkbmp2carray

./: CMakeLists.txt  LICENSE  README.md  img_local.c
scripts/: dithering.sh
src/: CMakeLists.txt  main.cpp
